--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -4,10 +4,19 @@
     margin: 0;
 }
 
+/*general styling*/
 body {
     background-color: #d9dcd6;
 }
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+p {
+    font-size: 16px;
+}
 
+/*header styling*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -36,15 +45,7 @@ body {
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
+/*hero styling*/
 .hero {
     height: 800px;
     width: 100%;
@@ -54,22 +55,37 @@ p {
     background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
+/*main block styling*/
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+.main-block {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+.main-block img {
+    max-height: 200px;
+}
+.main-block h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
 
+/*benefit aside styling*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -94,29 +110,13 @@ p {
     max-width: 150px;
 }
 
-.main-block {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-.main-block img {
-    max-height: 200px;
-}
-.main-block h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/*footer styling*/
 .footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
 .footer h2 {
     font-size: 20px;
 }
